--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +17,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^7.0.0",
     "bfj": "6.1.1",
+    "body-parser": "^1.18.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "compose": "^0.1.2",
@@ -25,6 +26,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "ejs-loader": "^0.3.1",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.6",
@@ -75,7 +77,7 @@
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
-    "webpack-dev-server": "3.1.14",
+    "webpack-dev-server": "^3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
@@ -155,6 +157,8 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.8.0"
+    "enzyme": "^3.8.0",
+    "html-webpack-template": "^6.2.0",
+    "webpack-cli": "^3.2.1"
   }
 }
