--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest-dom": "^3.0.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "meow-chunk-composition": "^1.0.2",
     "mini-css-extract-plugin": "0.4.3",
     "node": "^11.4.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
