--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "2.4.1",
-    "axios": "^0.18.0",
+    "axios": "^0.15.3",
+    "axios-mock-adapter": "^1.16.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-named-asset-import": "^0.3.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^7.0.0",
@@ -27,7 +29,7 @@
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "ejs-loader": "^0.3.1",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-adapter-react-16": "latest",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.6",
     "eslint-loader": "2.1.1",
@@ -87,7 +89,8 @@
   "scripts": {
     "start": "SET \"NODE_ENV=development\" && webpack-dev-server --open  --config config/webpack.config.js",
     "build": "SET \"NODE_ENV=production\" && webpack --config config/webpack.prod.config.js",
-    "test": "jest",
+    "testDom": "jest -c jest.jsdom.config.js",
+    "testNode": "jest -c jest.config.node.js ",
     "server": "node server/server.js"
   },
   "eslintConfig": {
@@ -99,64 +102,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "resolver": "jest-pnp-resolver",
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "png",
-      "jpg"
-    ],
-    "modulePaths": [
-      "images",
-      "components"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "images",
-      "components"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/?!(react-redux/)",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
-      "^images(.*)$": "<rootDir>/src/images$1",
-      "^components(.*)$": "<rootDir>/src/js/components/$1"
-    },
-    "modulePathIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ],
-    "setupTestFrameworkScriptFile": "<rootDir>/src/js/setupTests.js"
-  },
   "babel": {
     "presets": [
       "react-app"
@@ -165,7 +110,9 @@
   "devDependencies": {
     "clean-webpack-plugin": "^1.0.1",
     "enzyme": "^3.8.0",
+    "enzyme-to-json": "^3.3.5",
     "html-webpack-template": "^6.2.0",
+    "moxios": "^0.4.0",
     "webpack-cli": "^3.2.1"
   }
 }
