--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-resolve": "23.6.0",
     "meow-chunk-composition": "^1.0.2",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.24.0",
     "node": "^11.4.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
