remade components from classes to func components

--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "latest",
-    "react": "^16.7.0",
+    "react": "next",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "next",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.1.1",
     "react-router": "latest",
