--- a/package.json
+++ b/package.json
@@ -106,9 +106,13 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "clean-webpack-plugin": "^1.0.1",
     "enzyme": "^3.8.0",
     "enzyme-to-json": "^3.3.5",
