--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   },
   "scripts": {
     "start": "SET \"NODE_ENV=development\" && webpack-dev-server --open  --config config/webpack.config.js",
-    "build": "SET \"NODE_ENV=production\" && webpack --config config/webpack.config.js",
+    "build": "SET \"NODE_ENV=production\" && webpack --config config/webpack.config.js ",
     "testDom": "SET \"TEST_ENV=dom\" && jest -c jest.config.js",
     "testNode": "SET \"TEST_ENV=node\"  && jest -c jest.config.js",
     "server": "node server/server.js"
@@ -118,6 +118,7 @@
     "enzyme-to-json": "^3.3.5",
     "html-webpack-template": "^6.2.0",
     "moxios": "^0.4.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack-bundle-analyzer": "^3.1.0"
   }
 }
