--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "enzyme-to-json": "^3.3.5",
     "html-webpack-template": "^6.2.0",
     "moxios": "^0.4.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-bundle-analyzer": "^3.1.0"
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.2.1"
   }
 }
