--- a/package.json
+++ b/package.json
@@ -1,62 +1,11 @@
 {
-  "name": "my-project",
+  "name": "cats-farm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.1.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "@svgr/webpack": "2.4.1",
     "axios": "^0.15.3",
-    "axios-mock-adapter": "^1.15.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-named-asset-import": "^0.3.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-react-app": "^7.0.0",
-    "bfj": "6.1.1",
     "body-parser": "^1.18.3",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
-    "compose": "^0.1.2",
-    "copy-webpack-plugin": "^4.6.0",
-    "create-react-app": "^2.1.1",
-    "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "ejs-loader": "^0.3.1",
-    "enzyme-adapter-react-16": "latest",
-    "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.6",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "extract-css-chunks-webpack-plugin": "^3.3.2",
-    "file-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "fs-extra": "7.0.0",
-    "html-webpack-plugin": "4.0.0-alpha.2",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
-    "jest-dom": "^3.0.0",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
-    "meow-chunk-composition": "^1.0.2",
-    "mini-css-extract-plugin": "0.4.3",
     "moment": "^2.24.0",
-    "node": "^11.4.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.1.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.3.1",
-    "postcss-safe-parser": "4.0.1",
     "prop-types": "latest",
     "react": "next",
     "react-app-polyfill": "^0.2.0",
@@ -64,28 +13,9 @@
     "react-dom": "next",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.1.1",
-    "react-router": "latest",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "latest",
-    "react-testing-library": "^5.3.2",
-    "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "resolve": "1.8.1",
-    "resolve-url-loader": "^3.0.0",
-    "sass-loader": "7.1.0",
-    "sinon": "^7.2.2",
-    "style-loader": "0.23.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "terser-webpack-plugin": "1.1.0",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "SET \"NODE_ENV=development\" && webpack-dev-server --open  --config config/webpack.config.js",
@@ -113,12 +43,65 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "webpack-dev-server": "^3.1.14",
     "clean-webpack-plugin": "^1.0.1",
     "enzyme": "^3.8.0",
     "enzyme-to-json": "^3.3.5",
     "html-webpack-template": "^6.2.0",
     "moxios": "^0.4.0",
     "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-cli": "^3.2.1"
+    "sinon": "^7.2.2",
+    "webpack-cli": "^3.2.1",
+    "axios-mock-adapter": "^1.15.0",
+    "jest": "23.6.0",
+    "jest-dom": "^3.0.0",
+    "jest-pnp-resolver": "1.0.1",
+    "jest-resolve": "23.6.0",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
+    "resolve-url-loader": "^3.0.0",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "terser-webpack-plugin": "1.1.0",
+    "url-loader": "1.1.1",
+    "webpack": "4.29.6",
+    "webpack-manifest-plugin": "2.0.4",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "pnp-webpack-plugin": "1.1.0",
+    "html-webpack-plugin": "next",
+    "identity-obj-proxy": "3.0.0",
+    "meow-chunk-composition": "^1.0.2",
+    "@babel/core": "7.1.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@svgr/webpack": "2.4.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.4",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-named-asset-import": "^0.3.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-react-app": "^7.0.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "1.0.0",
+    "ejs-loader": "^0.3.1",
+    "enzyme-adapter-react-16": "latest",
+    "eslint": "5.6.0",
+    "eslint-config-react-app": "^3.0.6",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
+    "extract-css-chunks-webpack-plugin": "^3.3.2",
+    "file-loader": "2.0.0",
+    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
+    "mini-css-extract-plugin": "0.4.3",
+    "resolve": "1.8.1"
   }
 }
